--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        In the course of my journey in life, I realized that a lot of human problems arose as a result of miscommunication. 
+			   As a data linguist presently pursuing a masters' degree in Computational Linguistics with a solid background in Linguistics, 
+			   I believe that language is a strong tool to help tackle our problems as social beings. I am interested in the application of language 
+			   to proffer life changing solutions for challenges, break barriers, live amicably and enjoy the world we dwell in with the aid 
+			   of Natural Language Processing.
                     </p>
                 </div>
             </div>
