--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>30 Days of NLP</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+				For 30 days, I will be exploring the wide field of Natural Language Processing by solving tasks and applications to real life problems.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">https://github.com/IyanuSh/Days-of-NLP</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -173,11 +173,12 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>YOSM</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Created the first ever Nollywood Movie Review Corpus - collected the data, annotated and translated in Yoruba. Performed some sentiment analysis experiments 
+			    with the data using state-of-the-art machine learning pre-trained language models like mBERT and AfriBERTa to classify the movie reviews. https://arxiv.org/abs/2204.09711
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">https://arxiv.org/abs/2204.09711</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
